Front-end and back-end connected.

--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -56,7 +56,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secundary);
@@ -70,13 +70,14 @@
   justify-content: initial;
   padding: 0 1rem;
   transition: 0.2s;
+  text-decoration: none;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
     background: var(--color-secundary-dark);
 }
 
-.teacher-item footer button img {  
+.teacher-item footer a img {  
   width: 5rem;
   height: 2rem;
 }
